--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,30 @@ h3 {
     max-width: 100%;
     max-height: 100%;
 }
+
+.ad-left {
+    position: fixed;
+    top: 50%;
+    left: 20%;
+    transform: translateY(-50%);
+    z-index: 1;
+}
+
+.ad-right {
+    position: fixed;
+    top: 50%;
+    right: 20%;
+    transform: translateY(-50%);
+    z-index: 1;
+}
+
+.footnote {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 20px;
+    color: #412d2d;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
