--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,6 @@ h3 {
 
 @media only screen and (max-width: 768px) {
     .ad-left, .ad-right {
-        position: fixed;
-        bottom: 0;
-        transform: none;
+        display: none;
     }
 }
