--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,13 @@ h3 {
     z-index: 1;
 }
 
+.ad-bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
 .footnote {
     text-align: center;
     margin-top: 20px;
