--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ h3 {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin-bottom: 100px;
 }
 
 .box {
@@ -58,10 +59,11 @@ h3 {
 }
 
 .ad-bottom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
 }
 
 .footnote {
@@ -69,7 +71,7 @@ h3 {
     margin-top: 20px;
     font-size: 20px;
     color: #412d2d;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
