--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 h2 {
@@ -20,11 +20,11 @@ h3 {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(10, 80px);
-    grid-template-rows: repeat(10, 80px);
+    grid-template-columns: repeat(10, 100px);
+    grid-template-rows: repeat(10, 100px);
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    margin-bottom: 100px;
 }
 
 .box {
@@ -44,10 +44,10 @@ h3 {
 .footnote {
     text-align: center;
     margin-top: 10px;
+    margin-bottom: 100px;
     font-size: 20px;
     color: #412d2d;
     position: relative;
-    bottom: 40%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -56,20 +56,21 @@ h3 {
     position: fixed;
     top: 50%;
     left: 20%;
-    transform: translateY(-50%);
+    transform: translateY(-40%);
     z-index: 1;
-    width: 120px;
-    height: 600px;
 }
 
 .ad-right {
     position: fixed;
     top: 50%;
     right: 20%;
-    transform: translateY(-50%);
+    transform: translateY(-40%);
     z-index: 1;
-    width: 120px;
-    height: 600px;
+}
+
+.ad-bottom {
+    text-align: center;
+    position: relative;
 }
 
 @media only screen and (max-width: 1200px) {
